[project]
name = "dtocean-examples"
version = "2026.01.11"
description = "Examples for the DTOcean suite of tools"
authors = [
    {name = "Mathew Topper",email = "damm_horse@yahoo.co.uk"}
]
license = {text = "Unlicense"}
readme = "README.md"
requires-python = ">=3.10,<3.15"

dependencies = [
    "dvc[s3] (>=3.59.1,<4.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "bump-my-version (>=1.2.6,<2.0.0)"
]

[tool.poetry]
package-mode = false

[tool.bumpversion]
parse = """(?x)                     # Verbose mode
    (?P<release>                    # The release part
        (?:[1-9][0-9]{3})\\.        # YYYY.
        (?:1[0-2]|0[1-9])           # 0M.
    )
    (?:\\.(?P<patch>\\d+))?         # .patch, optional
"""
serialize = ["{release}.{patch}"]
commit = true
message = "chore: bump version {current_version} → {new_version}"

[tool.bumpversion.parts.release]
calver_format = "{YYYY}.{0M}"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
